docs(aikit-use):update aikit use

--- a/AI_Portable_Kit_CN/6-RoboticArmKnowledge/6.5-robot_kinematics.md
+++ b/AI_Portable_Kit_CN/6-RoboticArmKnowledge/6.5-robot_kinematics.md
@@ -1,4 +1,4 @@
-# myCobot 280 algorithm
+# myCobot 280 算法
 
 ## 1 结构参数
 
@@ -18,47 +18,11 @@
 
 ![dcmotor](../resources/6-RoboticArmKnowledge/6.5-1.png)
 
-## 2 坐标系简介
-### 2.1 工具坐标系
-![TOOL](../../resourse/2-serialproduct/2.1-280/algorithm/tool1.png)
+# MechArm 270 算法
 
-如图是Mecharm的机器人模型，图中的Base表示机器人的基坐标系，O’表示末端法兰盘坐标系，P点表示机械臂末端相对于基坐标系的位置（x=152, y=0, z=224）
+## DH参数
 
-在末端法兰盘的基础上延伸一定位姿，并将设置的工具点视为机器末端
-
-![TOOL](../resources/6-RoboticArmKnowledge/6.5-2.png)
-
-图中的T即为设置的工具坐标系，该坐标系的姿态与O’一致，原点位置发生了相对位移，使用python函数设置工具坐标系
-
-- set_tool_reference([x, y, z, rx, ry, rz])	//设置工具坐标系
-- set_end_type(1)	//设置末端坐标系类型为工具
-- 由于工具坐标系T相对O’未发生旋转，rx = ry = rz = 0
-- 假设工具坐标系T的原点在坐标系O’中坐标为（x = 0, y = 0, z = 100mm）
-- 最终的工具坐标系参数为set_tool_reference(0, 0, 100, 0, 0, 0)
-
-
-![TOOL](../resources/6-RoboticArmKnowledge/6.5-3.png)
-
-由于设置了工具坐标系，此时机器人的末端从O’延伸至了T，此时读到的机器末端坐标变成了（152+100, 0, 224），并且坐标姿态运动将绕工具点T旋转。
-
-### 2.2 世界坐标系
-
-![TOOL](../resources/6-RoboticArmKnowledge/6.5-4.png)
-
-第2节介绍了通过设置工具坐标系可以对机械臂末端坐标系做一定位姿的延伸，我们也可以通过设置世界坐标系在机械臂Base基坐标系的基础上延伸一定位姿，设置的世界坐标系将取代原Base坐标系成为新的基坐标系。
-
-图中的W即为设置的世界坐标系，该坐标系的姿态与Base一致，原点位置发生了相对位移，使用python函数设置世界坐标系
-
-
-- set_world_reference([x, y, z, rx, ry, rz])	//设置世界坐标系
-- set_reference_frame(1)	//设置基坐标系类型为世界
-- 假设世界坐标系W相对Base未发生旋转，rx = ry = rz = 0
-- 假设世界坐标系W的原点在坐标系Base中坐标为（x = 0, y = 0, z = -100mm）
-- 最终的世界坐标系参数为set_world_reference(0, 0, -100, 0, 0, 0)
-
-
-
- 由于设置了世界坐标系，此时机器人的原点从Base延伸至了W，此时读到的O’坐标变成了（152, 0, 224+100）。
+![dcmotor](../resources/6-RoboticArmKnowledge/6.5-2.png)
 
 
 
