docs(aikit-use):update aikit use

--- a/AI_Portable_Kit_CN/5-BasicAlgorithmFunction/5.5-yolov5_recognition.md
+++ b/AI_Portable_Kit_CN/5-BasicAlgorithmFunction/5.5-yolov5_recognition.md
@@ -1,4 +1,4 @@
-# 二维码识别
+# yolov5识别
 
 系统开机后，会自动启动程序，该程序支持启动颜色识别、形状识别、特征点图像识别、AR二维码识别、YOLOv5 图像识别、AiKit_UI程序、手柄控制程序、myCobot自适应夹爪案例、myCobot五指灵巧手案例以及stag码跟踪案例。
 
