--- a/AI_Portable_Kit_EN/5-BasicAlgorithmFunction/5.5-yolov5_recognition.md
+++ b/AI_Portable_Kit_EN/5-BasicAlgorithmFunction/5.5-yolov5_recognition.md
@@ -1,4 +1,4 @@
-# QR Code Recognition
+# Yolov5 Recognition
 
 After the system boots up, the program automatically launches. This program supports color recognition, shape recognition, feature point image recognition, AR QR code recognition, YOLOv5 image recognition, AiKit_UI, handle control, myCobot adaptive gripper examples, myCobot five-finger dexterous hand examples, and stag code tracking examples.
 
